# vchkuser

./: .gitignore  LICENSE  Makefile  Makefile.am  README  README.rst  configure.ac  debug.c  debug.h  mkrelease.sh  util.c  util.h  vchkuser.c  vchkuser.sh
